--- a/package.json
+++ b/package.json
@@ -6,14 +6,14 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "body-parser": "^1.20.2",
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
-    "http-errors": "~1.6.3",
-    "jade": "~1.11.0",
-    "morgan": "~1.9.1",
-    "body-parser": "^1.20.2",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "mongoose": "^7.0.3"
+    "http-errors": "~1.6.3",
+    "jade": "^1.9.2",
+    "mongoose": "^7.0.3",
+    "morgan": "~1.9.1"
   }
 }
