--- a/package.json
+++ b/package.json
@@ -10,9 +10,9 @@
     "cookie-parser": "~1.4.4",
     "debug": "~2.6.9",
     "dotenv": "^16.0.3",
+    "ejs": "^3.1.9",
     "express": "^4.18.2",
     "http-errors": "~1.6.3",
-    "jade": "^1.9.2",
     "mongoose": "^7.0.3",
     "morgan": "~1.9.1"
   }
