--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^9.0.0",
     "mongoose": "^7.0.3",
-    "morgan": "~1.9.1",
-    "node-fetch": "^3.3.1"
+    "morgan": "~1.9.1"
   }
 }
